--- a/quanlykhoaluan/src/main/resources/messages.properties
+++ b/quanlykhoaluan/src/main/resources/messages.properties
@@ -27,6 +27,7 @@ tieuChi.diem.nullErr=\u0110i\u1ec3m kh\u00f4ng \u0111\u01b0\u1ee3c \u0111\u1ec3 
 khoaLuan.tenKhoaLuan.lenErr=T\u00ean kh\u00f3a lu\u1eadn t\u1ed1i \u0111a 100 k\u00fd t\u1ef1
 khoaLuan.tenKhoaLuan.nullErr=T\u00ean kh\u00f3a lu\u1eadn kh\u00f4ng \u0111\u01b0\u1ee3c \u0111\u1ec3 tr\u1ed1ng
 khoaLuan.ngayGhiNhan.nullErr=Ng\u00e0y ghi nh\u1eadn kh\u00f4ng \u0111\u01b0\u1ee3c \u0111\u1ec3 tr\u1ed1ng
+khoaLuan.hoiDongId.outOfSizeErr=h\u1ed9i \u0111\u1ed3ng t\u1ed1i \u0111a ch\u1ea5m 5 kh\u00f3a lu\u1eadn
 
 #HoiDongBaoVeKhoaLuan
 hoiDong.tenHoiDong.lenErr=T\u00ean h\u1ed9i \u0111\u1ed3ng t\u1ed1i \u0111a 100 k\u00fd t\u1ef1
@@ -37,9 +38,11 @@ hoiDong.ngayKhoa.nullErr=Ng\u00e0y kh\u00f3a kh\u00f4ng \u0111\u01b0\u1ee3c \u01
 #GiangVienThuocHoiDong
 giangVienThuocHoiDong.vaiTro.nullErr=Vai tr\u00f2 kh\u00f4ng \u0111\u01b0\u1ee3c \u0111\u1ec3 tr\u1ed1ng
 giangVienThuocHoiDong.ngayVaoHoiDong.nullErr=Ng\u00e0y v\u00e0o h\u1ed9i \u0111\u1ed3ng kh\u00f4ng \u0111\u01b0\u1ee3c \u0111\u1ec3 tr\u1ed1ng
+giangVienThuocHoiDong.nguoiDungId.soLuongGiangVienErr=T\u1ed1i thi\u1ec3u 3 gi\u1ea3ng vi\u00ean v\u00e0 t\u1ed1i \u0111a 5 gi\u1ea3ng vi\u00ean
 
 #GiangVienHuongDan
 giangVienHuongDan.ngayBatDauHuongDan.nullErr=Ng\u00e0y b\u1eaft \u0111\u1ea7u h\u01b0\u1edbng d\u1eabn kh\u00f4ng \u0111\u01b0\u1ee3c \u0111\u1ec3 tr\u1ed1ng
+giangVienHuongDan.khoaLuanId.soLuongKhoaLuanMsg=M\u1ed7i kh\u00f3a lu\u1eadn t\u1ed1i \u0111a 2 gi\u1ea3ng vi\u00ean
 
 #GiangVienChamDiem
 giangVienChamDiem.diem.limErr=\u0110i\u1ec3m t\u1ed1i thi\u1ec3u l\u00e0 0.25 t\u1ed1i \u0111a l\u00e0 4
