--- a/quanlykhoaluan/src/main/resources/messages.properties
+++ b/quanlykhoaluan/src/main/resources/messages.properties
@@ -17,6 +17,9 @@ nguoiDung.matKhau.nullErr=M\u1eadt kh\u1ea9u kh\u00f4ng \u0111\u01b0\u1ee3c \u01
 nguoiDung.sdt.lenErr=S\u1ed1 \u0111i\u1ec7n tho\u1ea1i ph\u1ea3i l\u00e0 10 s\u1ed1
 nguoiDung.sdt.nullErr=S\u1ed1 \u0111i\u1ec7n tho\u1ea1i kh\u00f4ng \u0111\u01b0\u1ee3c \u0111\u1ec3 tr\u1ed1ng
 nguoiDung.img.nullErr=Avatar kh\u00f4ng \u0111\u01b0\u1ee3c \u0111\u1ec3 tr\u1ed1ng
+nguoiDung.email.alreadyHaveErr=Email \u0111\u00e3 \u0111\u01b0\u1ee3c s\u1eed d\u1ee5ng
+nguoiDung.sdt.alreadyHaveErr=S\u1ed1 \u0111i\u1ec7n tho\u1ea1i \u0111\u00e3 \u0111\u01b0\u1ee3c s\u1eed d\u1ee5ng
+nguoiDung.taiKhoan.alreadyHaveErr=T\u00e0i kho\u1ea3n \u0111\u00e3 \u0111\u01b0\u1ee3c s\u1eed d\u1ee5ng
 
 #TieuChi
 tieuChi.noiDungTieuChi.lenError=N\u1ed9i dung ph\u1ea3i t\u1ed1i thi\u1ec3u 3 k\u00fd t\u1ef1
