--- a/quanlykhoaluan/src/main/resources/messages.properties
+++ b/quanlykhoaluan/src/main/resources/messages.properties
@@ -20,6 +20,7 @@ nguoiDung.img.nullErr=Avatar kh\u00f4ng \u0111\u01b0\u1ee3c \u0111\u1ec3 tr\u1ed
 nguoiDung.email.alreadyHaveErr=Email \u0111\u00e3 \u0111\u01b0\u1ee3c s\u1eed d\u1ee5ng
 nguoiDung.sdt.alreadyHaveErr=S\u1ed1 \u0111i\u1ec7n tho\u1ea1i \u0111\u00e3 \u0111\u01b0\u1ee3c s\u1eed d\u1ee5ng
 nguoiDung.taiKhoan.alreadyHaveErr=T\u00e0i kho\u1ea3n \u0111\u00e3 \u0111\u01b0\u1ee3c s\u1eed d\u1ee5ng
+nguoiDung.nganh.nullErr=Ng\u00e0nh c\u1ee7a sinh vi\u00ean kh\u00f4ng \u0111\u01b0\u1ee3c \u0111\u1ec3 tr\u1ed1ng
 
 #TieuChi
 tieuChi.noiDungTieuChi.lenError=N\u1ed9i dung ph\u1ea3i t\u1ed1i thi\u1ec3u 3 k\u00fd t\u1ef1
@@ -32,6 +33,7 @@ khoaLuan.tenKhoaLuan.lenErr=T\u00ean kh\u00f3a lu\u1eadn t\u1ed1i \u0111a 100 k\
 khoaLuan.tenKhoaLuan.nullErr=T\u00ean kh\u00f3a lu\u1eadn kh\u00f4ng \u0111\u01b0\u1ee3c \u0111\u1ec3 tr\u1ed1ng
 khoaLuan.ngayGhiNhan.nullErr=Ng\u00e0y ghi nh\u1eadn kh\u00f4ng \u0111\u01b0\u1ee3c \u0111\u1ec3 tr\u1ed1ng
 khoaLuan.hoiDongId.outOfSizeErr=h\u1ed9i \u0111\u1ed3ng t\u1ed1i \u0111a ch\u1ea5m 5 kh\u00f3a lu\u1eadn
+khoaLuan.nganh.nullErr=Ng\u00e0nh kh\u00f4ng \u0111\u01b0\u1ee3c \u0111\u1ec3 tr\u1ed1ng
 
 #HoiDongBaoVeKhoaLuan
 hoiDong.tenHoiDong.lenErr=T\u00ean h\u1ed9i \u0111\u1ed3ng t\u1ed1i \u0111a 100 k\u00fd t\u1ef1
