--- a/quanlykhoaluan/src/main/resources/messages.properties
+++ b/quanlykhoaluan/src/main/resources/messages.properties
@@ -54,3 +54,7 @@ giangVienHuongDan.khoaLuanId.soLuongKhoaLuanMsg=M\u1ed7i kh\u00f3a lu\u1eadn t\u
 giangVienChamDiem.diem.limErr=\u0110i\u1ec3m t\u1ed1i thi\u1ec3u l\u00e0 0.25 t\u1ed1i \u0111a l\u00e0 4
 giangVienChamDiem.diem.nullErr=\u0110i\u1ec3m kh\u00f4ng \u0111\u01b0\u1ee3c \u0111\u1ec3 tr\u1ed1ng
 giangVienChamDiem.ngayCham.nullErr=Ng\u00e0y ch\u1ea5m kh\u00f4ng \u0111\u01b0\u1ee3c \u0111\u1ec3 tr\u1ed1ng
+
+#ThongTinThanhLapHoiDong
+thongTinThanhLapHoiDong.giangVienCT.distinctError=C\u00e1c gi\u1ea3ng vi\u00ean \u0111\u01b0\u1ee3c ch\u1ecdn kh\u00f4ng \u0111\u01b0\u1ee3c tr\u00f9ng nhau
+thongTinThanhLapHoiDong.tenHoiDong.distinctErr=T\u00ean h\u1ed9i \u0111\u1ed3ng \u0111\u00e3 t\u1ed3n t\u1ea1i
