--- a/quanlykhoaluan/src/main/resources/messages.properties
+++ b/quanlykhoaluan/src/main/resources/messages.properties
@@ -58,3 +58,4 @@ giangVienChamDiem.ngayCham.nullErr=Ng\u00e0y ch\u1ea5m kh\u00f4ng \u0111\u01b0\u
 #ThongTinThanhLapHoiDong
 thongTinThanhLapHoiDong.giangVienCT.distinctError=C\u00e1c gi\u1ea3ng vi\u00ean \u0111\u01b0\u1ee3c ch\u1ecdn kh\u00f4ng \u0111\u01b0\u1ee3c tr\u00f9ng nhau
 thongTinThanhLapHoiDong.tenHoiDong.distinctErr=T\u00ean h\u1ed9i \u0111\u1ed3ng \u0111\u00e3 t\u1ed3n t\u1ea1i
+thongTinThanhLapHoiDong.kl.existErr=Kh\u00f3a lu\u1eadn \u0111\u00e3 c\u00f3 h\u1ed9i \u0111\u1ed3ng b\u1ea3o v\u1ec7
