--- a/quanlykhoaluan/src/main/resources/messages.properties
+++ b/quanlykhoaluan/src/main/resources/messages.properties
@@ -63,3 +63,7 @@ thongTinThanhLapHoiDong.kl.existErr=Kh\u00f3a lu\u1eadn \u0111\u00e3 c\u00f3 h\u
 #ThongTinGanKhoaLuanChoHoiDong
 thongTinGanKhoaLuanChoHoiDong.kl2.distinctErr=C\u00e1c kh\u00f3a lu\u1eadn \u0111\u01b0\u1ee3c ch\u1ecdn kh\u00f4ng \u0111\u01b0\u1ee3c tr\u00f9ng nhau
 thongTinGanKhoaLuanChoHoiDong.kl2.overSizeErr=H\u1ed9i \u0111\u1ed3ng ch\u1ec9 \u0111\u01b0\u1ee3c ph\u00e9p t\u1ed1i \u0111a 5 kh\u00f3a lu\u1eadn
+
+#ThongTinGiangVienChamDiem
+thongTinGiangVienChamDiem.listCT.distinctErr=B\u1ea1n \u0111\u00e3 ch\u1ea5m \u0111i\u1ec3m kh\u00f3a lu\u1eadn n\u00e0y r\u1ed3i
+thongTinGiangVienChamDiem.klId.nullErr=B\u1ea1n ch\u01b0a ch\u1ea5m \u0111i\u1ec3m
