--- a/quanlykhoaluan/src/main/resources/messages.properties
+++ b/quanlykhoaluan/src/main/resources/messages.properties
@@ -45,6 +45,7 @@ hoiDong.ngayKhoa.nullErr=Ng\u00e0y kh\u00f3a kh\u00f4ng \u0111\u01b0\u1ee3c \u01
 giangVienThuocHoiDong.vaiTro.nullErr=Vai tr\u00f2 kh\u00f4ng \u0111\u01b0\u1ee3c \u0111\u1ec3 tr\u1ed1ng
 giangVienThuocHoiDong.ngayVaoHoiDong.nullErr=Ng\u00e0y v\u00e0o h\u1ed9i \u0111\u1ed3ng kh\u00f4ng \u0111\u01b0\u1ee3c \u0111\u1ec3 tr\u1ed1ng
 giangVienThuocHoiDong.nguoiDungId.soLuongGiangVienErr=T\u1ed1i thi\u1ec3u 3 gi\u1ea3ng vi\u00ean v\u00e0 t\u1ed1i \u0111a 5 gi\u1ea3ng vi\u00ean
+giangVienThuocHoiDong.nguoiDungId.distinctVienErr=Gi\u1ea3ng vi\u00ean n\u00e0y \u0111\u00e3 \u0111\u01b0\u1ee3c ch\u1ecdn tr\u01b0\u1edbc \u0111\u00f3 v\u00e0o h\u1ed9i \u0111\u1ed3ng n\u00e0y r\u1ed3i
 
 #GiangVienHuongDan
 giangVienHuongDan.ngayBatDauHuongDan.nullErr=Ng\u00e0y b\u1eaft \u0111\u1ea7u h\u01b0\u1edbng d\u1eabn kh\u00f4ng \u0111\u01b0\u1ee3c \u0111\u1ec3 tr\u1ed1ng
