--- a/quanlykhoaluan/src/main/resources/messages.properties
+++ b/quanlykhoaluan/src/main/resources/messages.properties
@@ -50,6 +50,8 @@ giangVienThuocHoiDong.nguoiDungId.distinctVienErr=Gi\u1ea3ng vi\u00ean n\u00e0y 
 #GiangVienHuongDan
 giangVienHuongDan.ngayBatDauHuongDan.nullErr=Ng\u00e0y b\u1eaft \u0111\u1ea7u h\u01b0\u1edbng d\u1eabn kh\u00f4ng \u0111\u01b0\u1ee3c \u0111\u1ec3 tr\u1ed1ng
 giangVienHuongDan.khoaLuanId.soLuongKhoaLuanMsg=M\u1ed7i kh\u00f3a lu\u1eadn t\u1ed1i \u0111a 2 gi\u1ea3ng vi\u00ean
+giangVienHuongDan.nguoiDungId.distinctErr=Gi\u1ea3ng vi\u00ean n\u00e0y \u0111\u00e3 h\u01b0\u1edbng d\u1eabn kh\u00f3a lu\u1eadn n\u00e0y r\u1ed3i
+
 
 #GiangVienChamDiem
 giangVienChamDiem.diem.limErr=\u0110i\u1ec3m t\u1ed1i thi\u1ec3u l\u00e0 0 t\u1ed1i \u0111a l\u00e0 10
